cabal-version:      2.4
name:               Autocomplete
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Walker
maintainer:         walkjo53@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library autocomplete
    default-language:       Haskell2010
    build-depends:          base ^>=4.12.0.0,
                            containers,
                            text
    exposed-modules:        Autocomplete
    hs-source-dirs:         src
